manifests/expense-tracker/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: expense-tracker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: app
        image: ghcr.io/dakshayahuja/expense-backend:0.1
        ports:
        - containerPort: 8000
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: expense-tracker
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: backend
