manifests/expense-tracker/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: expense-tracker
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: expense-tracker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: app
        image: ghcr.io/dakshayahuja/expense-frontend:0.1
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-conf
        configMap:
          name: frontend-nginx
          items:
          - key: nginx.conf
            path: nginx.conf
